--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.2.12",
     "@angular/router": "^16.2.12",
+    "bootstrap": "^5.0.1",
     "firebase": "^9.9.1",
     "material": "^0.8.8",
     "ngx-toastr": "^18.0.0",
