--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.2.12",
     "@angular/router": "^16.2.12",
-    "bootstrap": "^5.0.1",
+    "bootstrap": "^5.3.3",
     "firebase": "^9.9.1",
+    "jquery": "^3.7.1",
     "material": "^0.8.8",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
@@ -34,6 +35,7 @@
     "@angular/cli": "~16.1.6",
     "@angular/compiler-cli": "^16.2.12",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.29",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
