--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "firebase": "^9.9.1",
     "jquery": "^3.7.1",
     "material": "^0.8.8",
+    "ng2-datepicker": "^12.0.0",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.6.2",
