--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.6.2",
-    "zone.js": "^0.13.3"
+    "zone.js": "^0.13.3",
+    "popper": "^1.0.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.12",
