--- a/angular.json
+++ b/angular.json
@@ -98,7 +98,8 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/firebase-messaging-sw.js"
+              "src/firebase-messaging-sw.js",
+              "src/index.js"
             ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
