--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "tracker-app",
   "version": "0.0.0",
+  "main": "index.js",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -21,16 +22,20 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.2.12",
     "@angular/router": "^16.2.12",
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.3.3",
+    "cors": "^2.8.5",
+    "express": "^4.18.3",
     "firebase": "^9.9.1",
+    "firebase-admin": "^12.0.0",
     "jquery": "^3.7.1",
     "material": "^0.8.8",
     "ng2-datepicker": "^12.0.0",
     "ngx-toastr": "^18.0.0",
+    "popper": "^1.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.6.2",
-    "zone.js": "^0.13.3",
-    "popper": "^1.0.1"
+    "zone.js": "^0.13.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.12",
