--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jquery": "^3.7.1",
     "material": "^0.8.8",
     "ng2-datepicker": "^12.0.0",
+    "ngx-spinner": "^16.0.2",
     "ngx-toastr": "^18.0.0",
     "popper": "^1.0.1",
     "rxjs": "~7.8.0",
